Fix slight layout bug

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -14,6 +14,7 @@ body {
 }
 
 header {
+    z-index: 3;
     flex-shrink: 64px;
     height: $header-height;
 
